fixed bags initialization mobile slider

--- a/src/entity/game/components/slider-analysis/style.module.scss
+++ b/src/entity/game/components/slider-analysis/style.module.scss
@@ -71,7 +71,7 @@
 .block_image {
   background: rgb(98, 25, 109);
   border-radius: 22px !important;
-  height: 100%;
+  //height: 100%;
 
   img {
     opacity: 0;
